--- a/src/app/layout.module.css
+++ b/src/app/layout.module.css
@@ -1,11 +1,13 @@
 .header {
   display: flex;
-  justify-content: space-between;
   align-items: center;
+  justify-content: space-between;
+
   padding: 8px;
+
   border-bottom: 1px solid #132f52
 }
 
 .nav a {
-  padding: 0px 8px;
+  padding: 0 8px;
 }
